<resources>
    <string name="app_name">EasyService</string>
    <string name="app_name_display">Easy\nService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_main">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address_line1">Address Line 1</string>
    <string name="city">City</string>
    <string name="pin">PIN</string>
    <string name="makani">MAKANI Number</string>
    <string-array name="language">
        <item>Please select a language</item>
        <item>en</item>
        <item>ar</item>
    </string-array>
    <string name="address_line2">Address Line 2</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_landing">Landing</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="my_appliance">MY APPLIANCES</string>
    <string name="book_service">Book Service</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="add_new_appliances">ADD NEW APPLIANCES</string>
    <string name="title_activity_add_appliance">Add Appliance</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="store">Store</string>
    <string-array name="warranty">

        <item>6 Months</item>
        <item>1 Year</item>
        <item>2 Year</item>
        <item>No Warranty</item>
    </string-array>
    <string-array name="category">
        <item>Select Category</item>
        <item>Refrigerator</item>
        <item>Washing Machine</item>
        <item>AC</item>
        <item>Air Coolers</item>
    </string-array>
    <string-array name="support_category">
        <item>Unable to register using OTP</item>
        <item>Unable to Add Device</item>
        <item>Unable to see My Devices list</item>
        <item>Unable to Request Service</item>
        <item>Unable to track Service Requests</item>
        <item>App hangs/crashes</item>
        <item>Technician did not turn up</item>
        <item>Service not completed in time</item>
        <item>Poor Service Quality</item>

    </string-array>
    <string-array name="location_array">
        <item>Home</item>
        <item>Work</item>
        <item>Others</item>

    </string-array>
    <string name="issue">Issue : </string>
    <string name="request_service">REQUEST SERVICE</string>
    <string name="request_placed">REQUEST PLACED</string>
    <string name="thank_you">Thank you!.. your request has been placed successfully and we have sent a email and sms to your number for the details.</string>
    <string name="title_activity_initial_diagnosis">REQUEST SERVICE</string>
    <string name="title_activity_request_history_detail">Request</string>
    <string name="my_requests">My Requests</string>
    <string name="view_details">View Details</string>
    <string name="select_category">Select Category</string>
    <string name="request_date">Request Date : </string>
    <string name="request_time">Request Time : </string>
    <string name="request_location">Request Location : </string>
    <string name="issue_category">Issue Category : </string>
    <string name="remark">Remark : </string>
    <string name="feedback">Feedback : </string>
    <string name="title_activity_appliance_info">Appliance Info</string>
    <string name="title_activity_edit_appliance">Edit Appliance</string>
    <string name="facebook_app_id">1560453810929318</string>
    <string name="serial_no">Serial No</string>
    <string name="date_of_purchase">Date Of Purchase</string>
    <string name="warranty_period">Warranty Coverage</string>
    <string name="invoice_image">Invoice image</string>
    <string name="follow_steps">Follow the step shown below and check if the problem is resolved</string>
    <string name="issue_still_exists">If the issue still exists then click on book request to request service</string>
    <string name="book_request">Book Request</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="select_the_issue">Select the issue :</string>
    <string name="image_to_show">Add image to show issue(Optional):</string>
    <string name="enter_remarks">Please enter remarks(optional)</string>
    <string name="select_date">Please select the date within 30 days from today.</string>
    <string name="date_of_service">Date Of Service</string>
    <string name="time_slot">Time Slot</string>
    <string name="home">Home</string>
    <string name="my_appliance_lower">My Appliance</string>
    <string name="request_history">Request History</string>
    <string name="my_diagnosis">My Diagnosis</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="knowledge_base">Knowledge Base</string>
    <string name="faqs">FAQ \'s</string>
    <string name="contact">Contact</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Signup</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="log_in">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="issue_image">Issue Image</string>
    <string name="brand_rating">Brand Rating :</string>
    <string name="service_rating">Service Rating :</string>
    <string name="submit">Submit</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="open">Open</string>
    <string name="location">Location</string>
    <string name="forum">Forum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="fill_details">Please fill user details</string>
    <string name="title_activity_certificate_view">CertificateViewActivity</string>
    <string name="title_activity_certi">CertiActivity</string>
    <string name="Score">TRUE VALUE SCORE</string>
    <string name="CertificateNumber">Certificate Number</string>
    <string name="CertificateNumbertitles">Your Certificate ID</string>
    <string name="default_score">0/0</string>
    <string name="last_check">   Last checked: N/A</string>
    <string name="offer_price">Offer price for your device</string>
    <string name="default_price_INR">INR 7000</string>
    <string name="test_start">Your True Value test is starting...</string>
    <string name="last_check_default_date">  Last checked: Wed, Feb 17 2015</string>
    <string name="result_score">YOUR SCORE</string>
    <string name="default_result_value">76/100</string>
    <string name="estimated_price">* ESTIMATED RESALE VALUE: 9000 INR</string>
    <string name="buy_insurance">BUY INSURANCE</string>
    <string name="congratulation">CONGRATULATIONS!</string>
    <string name="qualify_for_insurance">Your device score qualifies you for an insurance</string>
    <string name="mandatory_test">Mandatory Tests</string>
    <string name="complete">Completed</string>
    <string name="LicenseValidate">License Validate</string>
    <string name="help">" will check internal hardware components of your mobile device.\n\nPre-requisites:\n- Earphone Jack connected to 3.5mm jack\n- USB cable connected to a power/data source\n- Bluetooth setting is switched ON\n- Internet is connected\n\nHow to test device?\nClick 'Begin Test' to start test.\n\nTo repeat, select 'Test Again' option from menu control.\n\nHow to read report?\nThe report has following sections -\n• Score - Final score based on device performance\n• Last Checked - Date when last test was done\n• Detailed Report - Status for each components tested\n\nWhat do each status means?\n• Green Tick - Test successfully passed\n• Red Cross - Test failed\n• Red Stop Sign - Component not found (not applicable)"</string>
    <string name="about_us">"\n\nVersion: " + versionName + "\n\nCopyright: QUT TECHNOLOGIES (P) LIMITED"</string>
    <string name="proceed">"Ensure the following before begining device test!\n\n• Earphone Jack is connected to 3.5mm jack\n• USB cable is connected\n• Bluetooth setting is switch ON\n• Internet connection is ON\n• SD Card is inserted if slot is available\n• GPS is ON"</string>
    <string name="app_title">LCD TEST</string>
    <string name="FIFO_Test">FIFO Test :</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="default_string">NONE</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="pda_to_td_modem">TD</string>
    <string name="pda_to_wcdma_modem">WCDMA</string>
    <string name="sensorhub">SensorHub</string>
    <string name="sensorhub_text">Read sensor value when AP sleep</string>
    <string name="sensorhub_test_button">Sleep Test</string>
    <string name="title_barcode_test">Barcode Test</string>
    <string name="title_activity_beam">Barcode Test Beam</string>
    <string name="btn_start">"  START  "</string>
    <string name="btn_stop">"  STOP  "</string>
    <string name="beaming">Beaming</string>
    <string name="beamComplete">Beam Complete</string>
    <string name="beamError">Error beaming</string>
    <string name="acce_sensor">Accelerometer Sensor</string>
    <string name="cp_acce_sensor">CPs Accelerometer Sensor</string>
    <string name="prox_sensor">Proximity Sensor</string>
    <string name="baro_sensor">Barometer Sensor</string>
    <string name="ligh_sensor">Lights Sensor</string>
    <string name="gyro_sensor">Gyroscope Sensor</string>
    <string name="magn_Sensor">Magnetic Sensor</string>
    <string name="acce_image_test_button">IMAGE TEST</string>
    <string name="acc_graph_button">Graph</string>
    <string name="baro_ref_altitude">SEA LEVEL PRESSURE:</string>
    <string name="baro_ref_altitude_button">Enter Pressure</string>
    <string name="baro_self_test_button">Barometer Selftest</string>
    <string name="ligh_test_button">Light Sensor</string>
    <string name="gyro_self_test_button">Gyro Selftest</string>
    <string name="gyro_display_button">Display</string>
    <string name="gyro_graph_button">Graph</string>
    <string name="magn_self_test_button">Selftest</string>
    <string name="magn_power_noise_button">Power Noise Test</string>
    <string name="ultra_sensor">Ultrasonic Sensor</string>
    <string name="proximity_test">Proximity test mode</string>
    <string name="PROXIMITY_Sensor">Proximity Sensor</string>
    <string name="prox_offset_button">offset</string>
    <string name="proximity_title">Proximity Sensor</string>
    <string name="proximity_ADC">ADC</string>
    <string name="proximity_current_Offset">Offset</string>
    <string name="proximity_current_Low">Low threshold</string>
    <string name="proximity_current_High">High threshold</string>
    <string name="offset_Result">Result of offset :</string>
    <string name="proximity_Offset">Offset</string>
    <string name="proximity_Reset">Reset</string>
    <string name="adc_value_11">11</string>
</resources>